# AIMarketAnalyzer

./: .env.example  .gitignore  README.md  TRADING_GUIDE.md  index.html  pyproject.toml  requirements.txt  start.ps1  styles.css  test_angel.py
app/: __init__.py  config.py  main.py  sample_data.py
app/api/: dependencies.py
app/api/middleware/: timing.py
app/api/schemas/: scan.py
app/application/agents/: market_context.py  news_sentiment.py  options_analysis.py  orchestrator.py  risk_evaluation.py  technical_analysis.py  trade_recommendation.py
app/application/events/: bus.py  handlers.py
app/application/ports/: ai.py  broker.py  cache.py  market_data.py  news.py  notification.py  repositories.py
app/application/services/: option_analytics.py  risk_engine.py  scan_orchestrator.py
app/core/: __init__.py  app_state.py  constants.py  exceptions.py  interfaces.py  logging.py  utils.py
app/data_sources/: angel.py  kite.py  news.py  nse.py
app/domain/market/: entities.py  events.py  value_objects.py
app/domain/risk/: entities.py  events.py
app/domain/signal/: entities.py  events.py  value_objects.py
app/domain/trade/: entities.py  events.py  value_objects.py
app/infrastructure/ai/: azure_openai.py
app/infrastructure/brokers/: angel_one.py  kite.py  kite_broker.py
app/infrastructure/cache/: redis.py
app/infrastructure/market_data/: angel_one.py  circuit_breaker.py  composite.py  kite_provider.py  nse.py
app/infrastructure/news/: newsapi.py
app/infrastructure/notifications/: telegram.py
app/infrastructure/persistence/: database.py  models.py  repositories.py
app/routers/: __init__.py  admin.py  journal.py  kite_auth.py  market.py  scan.py  schemas.py  signals.py  telegram.py
app/services/: __init__.py  ai.py  api_probe.py  backtest.py  monitor.py  scan_service.py  scanner.py  scheduler.py  signal_analytics.py  storage.py  telegram.py
app/services/gates/: __init__.py  ai_regime.py  base.py  drawdown.py  engine.py  event_risk.py  expiry_day.py  iv_rank.py  macd_direction.py  risk_reward.py  rsi_extreme.py  spread.py  time_of_day.py  trend_alignment.py  vix.py  volume.py
app/services/scoring/: __init__.py  base.py  engine.py  momentum.py  news.py  option_chain.py  risk_reward.py  sentiment.py  trend.py  volume.py
app/services/strategies/: __init__.py  base.py  equity.py  options.py  regime_selector.py
scripts/: smoke_test.py
src/: app.js  data.js  engine.js
tests/: conftest.py
tests/unit/application/: test_ai_orchestrator.py  (+2 more)
(+4 files in other folders)
