[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-market-analyzer"
version = "0.4.0"
description = "Indian Options Research Desk — AI-powered F&O trading signals"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Environment / config
    "python-dotenv>=1.0.0",

    # AI / LLM
    "openai>=1.30.0",

    # Data
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "yfinance>=0.2.40",

    # Scheduling
    "APScheduler>=3.10.0",

    # Notifications
    "python-telegram-bot>=21.0",

    # Angel One SmartAPI
    "smartapi-python>=1.5.0",
    "pyotp>=2.9.0",
    "websocket-client>=1.9.0",
    "logzero>=1.7.0",

    # Database — SQLAlchemy 2.0 with async support
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",       # SQLite async driver (dev/test)
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",         # PostgreSQL async driver
    "psycopg2-binary>=2.9.9",  # Alembic sync connection for migrations
]
redis = [
    "redis[hiredis]>=5.0.0",   # Redis cache (aioredis-compatible)
]
prod = [
    "ai-market-analyzer[postgres,redis]",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # TestClient async support
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]    # B008: do not perform function calls in default arguments (FastAPI pattern)

[tool.ruff.per-file-ignores]
"tests/**" = ["S", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["tests/", "alembic/"]

[tool.coverage.run]
source = ["app"]
omit = ["app/infrastructure/brokers/kite.py"]  # placeholder — not yet implemented

[tool.coverage.report]
fail_under = 60   # raise to 90 in Phase 8
show_missing = true
